# 99

./: AGENT.md  Makefile  PROMPT.md  README.md
.github/ISSUE_TEMPLATE/: base.md
.github/workflows/: makefile.yml
lua/99/: geo.lua  id.lua  init.lua  prompt-settings.lua  prompt_settings.lua  providers.lua  request-context.lua  time.lua  utils.lua
lua/99/agents/: helpers.lua  init.lua
lua/99/editor/: init.lua  location.lua  lsp.lua  treesitter.lua
lua/99/extensions/: cmp.lua  init.lua
lua/99/language/: cpp.lua  elixir.lua  go.lua  init.lua  java.lua  lua.lua  typescript.lua
lua/99/logger/: level.lua  logger.lua
lua/99/ops/: clean-up.lua  context.lua  fill-in-function.lua  helpers.lua  implement-fn.lua  init.lua  marks.lua  over-range.lua  query.lua  request_status.lua  system-rules.lua  visual.lua
lua/99/request/: init.lua  system-rules.lua
lua/99/test/: agent.helpers_spec.lua  agents_spec.lua  fill_in_function.cpp_spec.lua  fill_in_function.elixir_spec.lua  fill_in_function_spec.lua  geo_spec.lua  implement-fn_spec-DO-NOT-USE-YET.lua  implement_function_spec.lua  integration.spec.lua  integration_spec.lua  logger_spec.lua  marks_spec.lua  providers_spec.lua  request_status_spec.lua  test_content.lua  (+2 more)
lua/srs/: geo.lua  init.lua
queries/cpp/: 99-function.scm  99-imports.scm
queries/lua/: 99-function.scm
queries/typescript/: 99-function.scm  cockpit-scope.scm
scratch/: refresh.lua  test.ts
scratch/cpp/: CMakeLists.txt  test.cpp  test.cppm  test.hpp
scripts/ci/: install_treesitter_parsers.lua  lua_ls_check.lua
scripts/tests/: minimal.vim
(+8 files in other folders)
